--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,16 @@ after_success:
   - docker push  sergiomasellis/multi-nginx
   - docker push  sergiomasellis/multi-server
   - docker push  sergiomasellis/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: us-east-2
+  app: mutli-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-us-east-2-563943166760
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: 
+    secure: $AWS_SECRET_KEY
