--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ after_success:
 deploy:
   provider: elasticbeanstalk
   region: us-east-2
-  app: mutli-docker
+  app: multi-docker
   env: MultiDocker-env
   bucket_name: elasticbeanstalk-us-east-2-563943166760
   bucket_path: docker-multi
